@@ -1,7 +1,10 @@
 package name.abuchen.portfolio.online;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import name.abuchen.portfolio.model.Security;
 
@@ -26,10 +29,15 @@ public class WebLocation
         return pattern;
     }
 
-    public URL constructURL(Security security) throws MalformedURLException
+    public URI constructURL(Security security) throws IOException, URISyntaxException
     {
-        String url = pattern.replace("{tickerSymbol}", security.getTickerSymbol()); //$NON-NLS-1$
-        url = url.replace("{isin}", security.getIsin()); //$NON-NLS-1$
-        return new URL(url);
+        String url = pattern.replace("{tickerSymbol}", encode(security.getTickerSymbol())); //$NON-NLS-1$
+        url = url.replace("{isin}", encode(security.getIsin())); //$NON-NLS-1$
+        return new URI(url);
+    }
+
+    private String encode(String s) throws IOException
+    {
+        return s == null ? "" : URLEncoder.encode(s, StandardCharsets.UTF_8.name()); //$NON-NLS-1$
     }
 }
